Converted all css files to scss

--- a/components/SearchBar.module.scss
+++ b/components/SearchBar.module.scss
@@ -1,4 +1,11 @@
 .searchForm
 {
     display: block;
+
+    button
+    {
+        margin: auto;
+        margin-top: 1rem;
+        display: block;
+    }
 }
