--- a/components/SearchBar.module.scss
+++ b/components/SearchBar.module.scss
@@ -6,6 +6,10 @@
     {
         margin: auto;
         margin-top: 1rem;
+        padding: 0.5rem 1rem;
         display: block;
+        border: none;
+        border-radius: 5px;
+        font-size: 1rem;
     }
 }
