--- a/pages/main.module.scss
+++ b/pages/main.module.scss
@@ -1,7 +1,18 @@
+.container
+{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .appTitle
 {
     margin-bottom: 1rem;
     font-family: 'StarJedi', sans-serif;
     font-size: 5rem;
     letter-spacing: 0.1em;
+    text-align: center;
 }
